Estilizando la página con CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>Documento inicial</title>
 </head>
 <body>
@@ -36,5 +37,34 @@
 
 
     </section>
+
+    <main>
+        <p> I´m a Statistician that love data and solving problems through technology. 
+            I like to think about a problem and find the way how I can learn about it.
+            I do my best to satisfy the end user.
+        </p>
+
+        <ul class = "social-icons">
+
+            <li>
+                <a href="#" class = "social-icon" id = "LinkedInd">
+                    <img src="/imagenes/iconos/linkedIn.png" alt="LinkedInd">
+                </a>
+            </li>
+
+            <li>
+                <a href="#" class = "social-icon" id = "GitHub">
+                    <img src="/imagenes/iconos/github.png" alt="GitHub">
+                </a>
+            </li>
+
+            <li>
+                <a href="#" class = "social-icon" id = "Twitter">
+                    <img src="/imagenes/iconos/twitter.png" alt="Twitter">
+                </a>
+            </li>
+            
+        </ul>
+    </main>
 </body>
 </html>
