Se arregló el encabezado para añadir logos

--- a/index.html
+++ b/index.html
@@ -5,32 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Documento inicial</title>
+    <title>My Portfolio</title>
 </head>
 <body>
+
     <header> 
-        <div class="image-container" id="logo">
-            <img src="imagenes/linux1.png" alt="Logo de Linux">
+        <div class="header-container">
+            <div class = "columna">
+                <img src="imagenes/python.png" alt="Logo de python">
+            </div>
+            <div class = "columna">
+                <img src="imagenes/R.png" alt="Logo de R">
+            </div>
+            <div class = "columna">
+                <img src="imagenes/Databricks_Logo.png" alt="Logo de Databricks">
+            </div>
+            <div class = "columna">
+                <img src="imagenes/html.png" alt="Logo de HTML">
+            </div>
+            <div class = "columna">
+                <img src="imagenes/css.png" alt="Logo de CSS">
+            </div>
+            <div class = "columna">
+                <img src="imagenes/javascript.png" alt="Logo de JavaScript">
+            </div>
+            <div class = "columna">
+                <img src="imagenes/spark.png" alt="Logo de Spark">
+            </div>
+            <div class = "columna">
+                <img src="imagenes/sql.png" alt="Logo de SQL">
+            </div>
+            <div class = "columna">
+                <img src="imagenes/linux1.png" alt="Logo de Linux">
+            </div>
+              
         </div>
     </header>
 
     <section id = "hero">
 
-        <div class="image-container" id="dataScience">
-            <img src="/imagenes/dataScience2.png" alt="Fondo DataScience">
+        <div class="image-container" id="machineLearning">
+            <img src="/imagenes/machineLearning.jpg" alt="Fondo machineLearning">
         </div>
 
         <div class = "information-container">
         
-            <div class= "image-container" id="fotoPersonal">
+            <div class = "image-container" id="fotoPersonal">
                 <img src="/imagenes/fotoJairo.png" alt="Foto de Jairo">
             </div>
 
-            <div class= "information">
+            <div class = "information">
                 <h1>Jairo Julián Ochoa</h1>
                 <span>@jairochoa</span>
 
-                <p>Statistician at Bancolombia | Datascience | Frontend Developer | Backend Developer</p>
+                <p id="texto">Statistician at Bancolombia | Datascience | Machine Learning |Frontend Developer | Backend Developer</p>
             </div>
         </div>
 
@@ -41,25 +69,25 @@
     <main>
         <p> I´m a Statistician that love data and solving problems through technology. 
             I like to think about a problem and find the way how I can learn about it.
-            I do my best to satisfy the end user.
+            I do my best to satisfy the end user. 
         </p>
 
         <ul class = "social-icons">
 
             <li>
-                <a href="#" class = "social-icon" id = "LinkedInd">
+                <a href="https://www.linkedin.com/in/jjochoa/" class = "social-icon" id = "LinkedInd" target="_blank">
                     <img src="/imagenes/iconos/linkedIn.png" alt="LinkedInd">
                 </a>
             </li>
 
             <li>
-                <a href="#" class = "social-icon" id = "GitHub">
+                <a href="https://github.com/jairochoa" class = "social-icon" id = "GitHub" target="_blank">
                     <img src="/imagenes/iconos/github.png" alt="GitHub">
                 </a>
             </li>
 
             <li>
-                <a href="#" class = "social-icon" id = "Twitter">
+                <a href="https://twitter.com/debersocial" class = "social-icon" id = "Twitter" target="_blank">
                     <img src="/imagenes/iconos/twitter.png" alt="Twitter">
                 </a>
             </li>
