Nuevos ajustes en el header

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                 <img src="imagenes/R.png" alt="Logo de R">
             </div>
             <div class = "columna">
+                <img src="imagenes/sas.png" alt="Logo de SAS">
+            </div>
+            <div class = "columna">
                 <img src="imagenes/Databricks_Logo.png" alt="Logo de Databricks">
             </div>
             <div class = "columna">
